# Recurrent_PPO

./: .gitignore  lunar_lander_helpers.py  main.py  model.py  output.txt  output2.txt  output_old.txt  output_orig.txt  polweights.py  ppo_atari_lstm.py  pyproject.toml  requirements.txt  training.py  visualisation.py
runs/Apr18_18-00-55_DESKTOP-OLS6V1O/: events.out.tfevents.1713456055.DESKTOP-OLS6V1O.196587.0
runs/Apr18_18-20-18_DESKTOP-OLS6V1O/: events.out.tfevents.1713457218.DESKTOP-OLS6V1O.205563.0
runs/Apr18_18-23-58_DESKTOP-OLS6V1O/: events.out.tfevents.1713457438.DESKTOP-OLS6V1O.207264.0
runs/Apr18_18-24-48_DESKTOP-OLS6V1O/: events.out.tfevents.1713457488.DESKTOP-OLS6V1O.207721.0
runs/Apr18_18-25-49_DESKTOP-OLS6V1O/: events.out.tfevents.1713457549.DESKTOP-OLS6V1O.208278.0
runs/Apr18_18-28-12_DESKTOP-OLS6V1O/: events.out.tfevents.1713457692.DESKTOP-OLS6V1O.209479.0
runs/Apr18_19-58-41_DESKTOP-OLS6V1O/: events.out.tfevents.1713463121.DESKTOP-OLS6V1O.258681.0
runs/Apr18_20-00-00_DESKTOP-OLS6V1O/: events.out.tfevents.1713463200.DESKTOP-OLS6V1O.259457.0
runs/Apr18_20-17-01_DESKTOP-OLS6V1O/: events.out.tfevents.1713464221.DESKTOP-OLS6V1O.269054.0
runs/Apr18_20-37-46_DESKTOP-OLS6V1O/: events.out.tfevents.1713465466.DESKTOP-OLS6V1O.282610.0
runs/Apr18_20-57-26_DESKTOP-OLS6V1O/: events.out.tfevents.1713466646.DESKTOP-OLS6V1O.295318.0
runs/Apr18_21-20-12_DESKTOP-OLS6V1O/: events.out.tfevents.1713468012.DESKTOP-OLS6V1O.310380.0
runs/Apr18_21-24-49_DESKTOP-OLS6V1O/: events.out.tfevents.1713468289.DESKTOP-OLS6V1O.313442.0
(+46 files in other folders)
