[project]
name = "recurrent-ppo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dxcam>=0.0.5",
    "gymnasium[box2d]",
    "ipykernel>=6.29.5",
    "line-profiler>=4.2.0",
    "matplotlib>=3.10.0",
    "opencv-python>=4.11.0.86",
    "pydirectinput>=1.0.4",
    "pywinctl>=0.4.1",
    "setuptools==81.*", # For tensorboard
    "standard-imghdr>=3.13.0",
    "tensorboard>=2.18.0",
    "torch>=2.6.0",
    "torch-tb-profiler>=0.4.3",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124" },
]
torchvision = [
    { index = "pytorch-cu124" },
]
torchaudio = [
    { index = "pytorch-cu124" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
